<resources>
    <string name="app_name">길거리 먹깨비</string>
    <string name="kakao_app_key">20313f342496c47f409cb9d8d741467b</string>
    <string name="title_activity_user_draw">UserDraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_QRcamera">QRcamera</string>
    <string name="menu_Userprofile">Userprofile</string>
    <string name="menu_Like">Like</string>
    <string name="menu_Bookmark">Bookmark</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Events">Events</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>