<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rfg2020.ui.home.HomeFragment"
        android:label="@string/menu_QRcamera"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.rfg2020.ui.gallery.GalleryFragment"
        android:label="@string/menu_Userprofile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.rfg2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Like"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_like"
        android:name="com.example.rfg2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Bookmark"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.example.rfg2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Settings"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.rfg2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Events"
        tools:layout="@layout/fragment_slideshow" />
</navigation>